[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "morix"
dynamic = ["version"]
requires-python = ">= 3.12"
dependencies = [
    "orix >=0.14",
    "matplotlib-scalebar",
    "numpy-quaternion",
    "scikit-image",
    "scikit-learn",
    "numpydoc != 1.9.0",
    "pydata-sphinx-theme",
    "sphinx                         >= 3.1",
    "sphinx-codeautolink[ipython]",
    "sphinx-copybutton              >= 0.2.5",
    "sphinx-design",
    "sphinx-gallery",
    "numpydoc",
    "pytest                         >= 5.4",
    "coverage                       >= 5.0",
    "pytest-cov                     >= 2.8.1",
    "hatch",
    "pre-commit                     >= 1.16",
    "orix[doc,tests,coverage]",
]

[tool.hatch.version]
path = "morix/__init__.py"

[tool.coverage.run]
branch = false
source = ["morix"]
relative_files = true
omit = [
    "morix/__init__.py",
    "morix/tests/**/*.py",
]

